--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "@capacitor/core": "5.5.0",
     "@capacitor/haptics": "5.0.6",
     "@capacitor/keyboard": "5.0.6",
+    "@capacitor/camera": "^5.0.6",
+    "@capacitor/filesystem": "^5.0.6",
+    "@ionic/pwa-elements": "^3.2.2",
     "@capacitor/network": "^5.0.6",
     "@capacitor/preferences": "^5.0.6",
     "@capacitor/status-bar": "5.0.6",
