--- a/package.json
+++ b/package.json
@@ -13,15 +13,16 @@
   },
   "dependencies": {
     "@capacitor/app": "5.0.6",
+    "@capacitor/camera": "^5.0.6",
     "@capacitor/core": "5.5.0",
+    "@capacitor/filesystem": "^5.0.6",
+    "@capacitor/google-maps": "^5.3.3",
     "@capacitor/haptics": "5.0.6",
     "@capacitor/keyboard": "5.0.6",
-    "@capacitor/camera": "^5.0.6",
-    "@capacitor/filesystem": "^5.0.6",
-    "@ionic/pwa-elements": "^3.2.2",
     "@capacitor/network": "^5.0.6",
     "@capacitor/preferences": "^5.0.6",
     "@capacitor/status-bar": "5.0.6",
+    "@ionic/pwa-elements": "^3.2.2",
     "@ionic/react": "^7.0.0",
     "@ionic/react-router": "^7.0.0",
     "@types/react-router": "^5.1.20",
